# DoomBF

./: .gitignore  CMakeLists.txt  build.cmd  build.sh  build_ibf.sh  readme.md
b/: addressing-A.b  addressing-B.b  call.b  description.md  flagged_exec_both_blocks.b  flagged_exec_first_block.b  flagged_exec_no_blocks.b  flagged_exec_second_block.b  ifnot.b  ifnot_human.b  jump.b  jump_human.b  mem.b  opt.b  readme.md  test.b
bf/bff4/: Makefile  bff4  bff4.c
bf/hackablebf/: CMakeLists.txt
bf/hackablebf/.zed/: tasks.json
bf/hackablebf/include/: bf.h  bf_test.h  collection_tests.h  collections.h  config.h  deque.h  vec.h
bf/hackablebf/src/: bf.c  bf_test.c  collection_tests.c  main.c
bf/industrial-bf/: CMakeLists.txt  Makefile  README.md  test.sh
bf/industrial-bf/evaluator/: config.h  debugger.c  infinite-tape.c  main.c  optimizer.c  util.c  vector.c
bf/industrial-bf/loader/: loader.c
bf/industrial-bf/src/: loader.c  macros.c  main.c
crt/: doom_crt.c  doom_env.h  heap.c
draft/: mac_doom.m  softfloat_32.c  xdemo.c
frontend/: CMakeLists.txt  lnx_doom.c  win_doom.c
platform/: CMakeLists.txt  doom_crt.h  heap.c  lnx_doom.c  mini_doom.c  mod_doom.h  printf.c  win_doom.c  winhello.c
tcc/: .gitignore  CMakeLists.txt  config.h  libtcc.c
tcc/lib/: bcheck.c
tcc/win32/lib/: chkstk.S
test/: bench.cmd  bench.ps1  bench.sh  bench_draft.sh  hello.c  results.csv  test.cmd
